# sev0

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
src/sev0/: __init__.py  config.py  dedup.py  engine.py  main.py  models.py  registry.py  scheduler.py  triage.py
src/sev0/adapters/: __init__.py
src/sev0/adapters/actions/: base.py  jira.py
src/sev0/adapters/channels/: base.py  teams.py
src/sev0/adapters/sources/: base.py  cloudwatch.py
tests/: conftest.py  test_config.py  test_dedup.py  test_engine.py  test_models.py  test_triage.py
